# iter-international-school

./: .gitignore  README.md  equilibirum.ipynb  pyproject.toml
iter_international_school/: .gitignore  __init__.py  dataset.py  elephant.py  equilibrium.py  mast.py  plasma_current.ipynb  plasma_current.py  plot.py  store.py  train_equilibrium.py
