[project]
name = "iis"
version = "0.1.0"
description = "Access and transform MAST data for the ITER International School 2024 Data Science competition."
authors = [
    {name = "Simon McIntosh",email = "simon.mcintosh@iter.org"}
]
license = {text = "LGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fsspec (>=2024.10.0,<2025.0.0)",
    "numpy (>=2.1.3,<3.0.0)",
    "xarray (>=2024.11.0,<2025.0.0)",
    "zarr (>=2.18.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.5.2,<2.0.0)",
    "matplotlib (>=3.9.2,<4.0.0)",
    "s3fs (>=2024.10.0,<2025.0.0)",
    "appdirs (>=1.4.4,<2.0.0)",
    "intake (>=2.0.7,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jinja2 (>=3.1.4,<4.0.0)",
    "intake-parquet (>=0.3.0,<0.4.0)",
    "bokeh (>=3.6.1,<4.0.0)",
    "intake-xarray (>=0.7.0,<0.8.0)",
    "setuptools (>=75.6.0,<76.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
spyder-kernels = "^3.0.1"

